<resources>
    <string name="app_name">APP2D2</string>
    <string name="about">Creator: Thomas Lansing\n+46 736 22 10 14\nthomas@lansing.nu\nAll images are stolen</string>
    <string name="action_home">Home</string>
    <string name="action_about">About</string>
    <string name="action_forcemeter">Force Meter</string>
    <string name="action_profiles">Character Profiles</string>
    <string name="action_quiz">Quiz</string>
    <string name="action_quiz_new_game">New Game</string>
    <string name="action_view_high_score">High Score</string>
    <string name="content_forcemeter">Checking which side of the force you are drawn to.</string>
    <string name="content_forcemeter_dark">You are drawn to the dark side! App set to dark side theme.</string>
    <string name="content_forcemeter_light">You are drawn to the light side! App set to light side theme.</string>
    <string name="select_char">Select Character</string>
    <string-array name="array_characters">
        <item>Select A Character</item>
        <item>Luke Skywalker</item>
        <item>Darth Vader</item>
        <item>Anakin Skywalker</item>
        <item>R2-D2</item>
        <item>C-3PO</item>
        <item>Leia Organa</item>
        <item>Obi-Wan Kenobi</item>
        <item>Chewbacca</item>
        <item>Han Solo</item>
        <item>Yoda</item>
        <item>Palpatine</item>
        <item>Boba Fett</item>
        <item>Qui-Gon Jinn</item>
        <item>Padmé Amidala</item>
        <item>Mace Windu</item>
        <item>Dooku</item>
        <item>Rey</item>
        <item>BB8</item>
        <item>Finn</item>
        <item>Jango Fett</item>
    </string-array>
    <string name="content_profile_html">
        Height &lt;b>%1$s centimeters&lt;/b>&lt;br>
        Mass &lt;b>%2$s kilograms&lt;/b>&lt;br>
        Hair Color &lt;b>%3$s&lt;/b>&lt;br>
        Skin Color &lt;b>%4$s&lt;/b>&lt;br>
        Eye Color &lt;b>%5$s&lt;/b>&lt;br>
        Birth Year &lt;b>%6$s&lt;/b>&lt;br>
        Gender &lt;b>%7$s&lt;/b>&lt;br>
        Home World &lt;b>%8$s&lt;/b></string>
    <string name="quiz_welcome">Welcome to the Star Wars Quiz! Begin by typing your name and press start. Good luck!</string>
    <string name="enter_name">Enter name</string>
    <string name="start">Start</string>
    <string name="quiz_headline">Welcome %1$s!</string>
    <string name="submit_answer">Sumbit Answer</string>
    <string name="view_details">View Details</string>
    <string name="quiz_question">Question: %1$s</string>
    <string name="quiz_correct_answer">Correct Answer: %1$s</string>
    <string name="quiz_user_answer">Your Answer: %1$s</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="quiz_feedback">Thanks for playing, %1$s!\nYou answered %2$d of the %3$d questions correct.</string>
    <string name="game_over">Game over! Click view details button for more information.</string>
    <string name="question_index">"Question: %1$d"</string>
    <string name="view_high_score">View High Score</string>
    <string name="player_name">%1$d. %2$s</string>
    <string name="player_score">Score: %1$d</string>
    <string name="players_top10">Top 10 Quiz Players</string>
</resources>
