<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_lightdarksidemeter"
        android:title="@string/action_forcemeter" />
    <item
        android:id="@+id/action_profiles"
        android:title="@string/action_profiles" />

    <item android:title="@string/action_quiz">
        <menu>
            <item
                android:id="@+id/action_quiz"
                android:title="@string/action_quiz_new_game" />
            <item
                android:id="@+id/action_quiz_high_score"
                android:title="@string/action_view_high_score" />
        </menu>
    </item>
</menu>