<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:rowCount="4"
        tools:context="sw.app2d2.quiz.QuizActivity">

        <TextView
            android:id="@+id/quizHeadline"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="@string/quiz_headline"
            android:textSize="@dimen/large_text" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_gravity="left|top"
            android:textSize="@dimen/medium_text" />

        <RadioGroup
            android:id="@+id/rgAnswers"
            android:layout_gravity="left|top"
            android:layout_margin="@dimen/margin_standard">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:text="@string/submit_answer" />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:enabled="false"
            android:text="@string/view_details" />

    </GridLayout>
</ScrollView>
